--- a/Roommate/View/RoomDetail/BaseInformationView.xib
+++ b/Roommate/View/RoomDetail/BaseInformationView.xib
@@ -14,7 +14,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="BaseInformationView" customModule="Roommate" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="715" height="180"/>
+            <rect key="frame" x="0.0" y="0.0" width="715" height="220"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cNq-JJ-xll">
@@ -35,7 +35,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Base information" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JXc-Ri-otr">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JXc-Ri-otr">
                     <rect key="frame" x="0.0" y="90" width="715" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="2dY-Vz-zZU"/>
@@ -45,44 +45,44 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Trk-v4-F5d">
-                    <rect key="frame" x="0.0" y="120" width="715" height="30"/>
+                    <rect key="frame" x="0.0" y="120" width="715" height="50"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fGa-8B-952">
-                            <rect key="frame" x="5" y="5" width="20" height="20"/>
+                            <rect key="frame" x="5" y="10" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="fGa-8B-952" secondAttribute="height" multiplier="1:1" id="zH7-f5-zGG"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R7q-LT-c4k">
-                            <rect key="frame" x="35" y="0.0" width="680" height="30"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="F9x-M6-iKo">
+                            <rect key="frame" x="35" y="0.0" width="680" height="50"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                        </textView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
+                        <constraint firstItem="F9x-M6-iKo" firstAttribute="leading" secondItem="fGa-8B-952" secondAttribute="trailing" id="0cZ-ua-BTJ"/>
+                        <constraint firstItem="F9x-M6-iKo" firstAttribute="top" secondItem="Trk-v4-F5d" secondAttribute="top" id="J3e-eL-YXp"/>
+                        <constraint firstAttribute="bottom" secondItem="F9x-M6-iKo" secondAttribute="bottom" id="L69-yP-4KX"/>
                         <constraint firstItem="fGa-8B-952" firstAttribute="leading" secondItem="Trk-v4-F5d" secondAttribute="leading" constant="5" id="R7i-90-MMr"/>
-                        <constraint firstAttribute="trailing" secondItem="R7q-LT-c4k" secondAttribute="trailing" id="SYb-hX-q5w"/>
-                        <constraint firstAttribute="height" constant="30" id="VoQ-uG-3Gl"/>
-                        <constraint firstAttribute="bottom" secondItem="R7q-LT-c4k" secondAttribute="bottom" id="WJJ-sg-t82"/>
-                        <constraint firstItem="fGa-8B-952" firstAttribute="top" secondItem="Trk-v4-F5d" secondAttribute="top" constant="5" id="aPD-v3-zVJ"/>
-                        <constraint firstItem="R7q-LT-c4k" firstAttribute="leading" secondItem="fGa-8B-952" secondAttribute="trailing" constant="10" id="f6h-GR-gvi"/>
-                        <constraint firstAttribute="bottom" secondItem="fGa-8B-952" secondAttribute="bottom" constant="5" id="onT-LZ-Or5"/>
-                        <constraint firstItem="R7q-LT-c4k" firstAttribute="top" secondItem="Trk-v4-F5d" secondAttribute="top" id="xfh-az-oDM"/>
+                        <constraint firstAttribute="trailing" secondItem="F9x-M6-iKo" secondAttribute="trailing" id="TEs-8y-asO"/>
+                        <constraint firstAttribute="height" constant="50" id="VoQ-uG-3Gl"/>
+                        <constraint firstItem="fGa-8B-952" firstAttribute="top" secondItem="Trk-v4-F5d" secondAttribute="top" constant="10" id="aPD-v3-zVJ"/>
+                        <constraint firstAttribute="bottom" secondItem="fGa-8B-952" secondAttribute="bottom" constant="10" id="onT-LZ-Or5"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zs8-DV-Tmj">
-                    <rect key="frame" x="0.0" y="150" width="715" height="30"/>
+                    <rect key="frame" x="0.0" y="170" width="715" height="30"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hZh-YW-Pqa">
-                            <rect key="frame" x="5" y="5" width="20" height="20"/>
+                            <rect key="frame" x="5" y="0.0" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="hZh-YW-Pqa" secondAttribute="height" multiplier="1:1" id="GwR-Ye-o8i"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XO3-hV-Mqk">
-                            <rect key="frame" x="35" y="0.0" width="680" height="30"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XO3-hV-Mqk">
+                            <rect key="frame" x="45" y="0.0" width="670" height="30"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -92,11 +92,12 @@
                     <constraints>
                         <constraint firstItem="XO3-hV-Mqk" firstAttribute="top" secondItem="Zs8-DV-Tmj" secondAttribute="top" id="5z9-nD-Wk1"/>
                         <constraint firstAttribute="trailing" secondItem="XO3-hV-Mqk" secondAttribute="trailing" id="7hW-I2-swh"/>
-                        <constraint firstItem="hZh-YW-Pqa" firstAttribute="top" secondItem="Zs8-DV-Tmj" secondAttribute="top" constant="5" id="8VZ-9h-UX9"/>
+                        <constraint firstItem="hZh-YW-Pqa" firstAttribute="top" secondItem="Zs8-DV-Tmj" secondAttribute="top" id="8VZ-9h-UX9"/>
                         <constraint firstAttribute="bottom" secondItem="XO3-hV-Mqk" secondAttribute="bottom" id="GAE-uH-Cgh"/>
                         <constraint firstItem="hZh-YW-Pqa" firstAttribute="leading" secondItem="Zs8-DV-Tmj" secondAttribute="leading" constant="5" id="Kfv-ns-zd1"/>
                         <constraint firstItem="XO3-hV-Mqk" firstAttribute="leading" secondItem="hZh-YW-Pqa" secondAttribute="trailing" constant="10" id="Rzl-eE-sWD"/>
-                        <constraint firstAttribute="bottom" secondItem="hZh-YW-Pqa" secondAttribute="bottom" constant="5" id="iC3-vz-YkG"/>
+                        <constraint firstAttribute="height" constant="30" id="dJE-zk-HuJ"/>
+                        <constraint firstAttribute="bottom" secondItem="hZh-YW-Pqa" secondAttribute="bottom" id="iC3-vz-YkG"/>
                     </constraints>
                 </view>
             </subviews>
@@ -109,7 +110,6 @@
                 <constraint firstItem="JXc-Ri-otr" firstAttribute="top" secondItem="xkE-Vh-fM0" secondAttribute="bottom" id="QOU-fn-x9x"/>
                 <constraint firstItem="xkE-Vh-fM0" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="SzC-6I-mrA"/>
                 <constraint firstItem="xkE-Vh-fM0" firstAttribute="top" secondItem="cNq-JJ-xll" secondAttribute="bottom" id="Uv8-2G-UKP"/>
-                <constraint firstItem="Zs8-DV-Tmj" firstAttribute="height" secondItem="Trk-v4-F5d" secondAttribute="height" id="Vgq-eQ-ytU"/>
                 <constraint firstItem="Zs8-DV-Tmj" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="Yge-vJ-ZKv"/>
                 <constraint firstItem="Trk-v4-F5d" firstAttribute="top" secondItem="JXc-Ri-otr" secondAttribute="bottom" id="evs-pm-9vb"/>
                 <constraint firstItem="JXc-Ri-otr" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="fyM-dc-kr2"/>
@@ -125,13 +125,13 @@
                 <outlet property="imgvBottom" destination="hZh-YW-Pqa" id="P9e-0X-wKy"/>
                 <outlet property="imgvtop" destination="fGa-8B-952" id="ZfK-KL-90M"/>
                 <outlet property="lblInfoBottom" destination="XO3-hV-Mqk" id="38w-fJ-Ovt"/>
-                <outlet property="lblInfoTop" destination="R7q-LT-c4k" id="l21-nh-jcN"/>
                 <outlet property="lblMainTitle" destination="cNq-JJ-xll" id="eeK-Hj-fmk"/>
                 <outlet property="lblStatus" destination="xkE-Vh-fM0" id="huk-OK-slg"/>
                 <outlet property="lblStatusHeightConstraint" destination="n2k-kV-Rsa" id="AF9-0J-BFU"/>
                 <outlet property="lblSubTitle" destination="JXc-Ri-otr" id="EPe-wi-RR8"/>
+                <outlet property="tvInfoTop" destination="F9x-M6-iKo" id="6G0-Gv-2OH"/>
             </connections>
-            <point key="canvasLocation" x="-76.5" y="-10"/>
+            <point key="canvasLocation" x="-76.5" y="54"/>
         </view>
     </objects>
 </document>
